--- a/PKCYsManage/config.json
+++ b/PKCYsManage/config.json
@@ -4,8 +4,8 @@
   "接口密钥": "",
   "users": [
     {
-      "username": "pkc",
-      "password": "pkc"
+      "username": "admin",
+      "password": "2007"
     }
   ]
 }
