--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,17 @@
 version: '3.3'
+
 services:
   pkc-ys:
     image: curtinlv/pkc-ys
-    container_name: pkc-ys
+    container_name: pkc-ys       
     ports:
       - "39900:39900"
     environment:
       - PKC_TITLE=PKC音色管理系统    # 系统名称
-      - PKC_USER=Curtin             # 用户名
-      - PKC_PASSWORD=${PKC_PASSWORD}         # 密码
-      - PKC_MY=${PKC_MY}         # 音色接口密码
+      - PKC_USER=admin             # 用户名
+      - PKC_PASSWORD=2007         # 密码，如需带特殊字符用.env引入
+      - PKC_MY=1d5ee08d-96f4-4acf-866e-07adb8781184         # 接口密钥，如需带特殊字符用.env引入
     volumes:
-    #  - ./ys.json:/app/ys.json          # 音色文件
       - ./backup:/app/backup          # 音色备份目录
-      - /etc/localtime:/etc/localtime:ro
+      - /etc/localtime:/etc/localtime:ro 
     restart: unless-stopped
